...
  void dispose() {
    _lifecycle.dispose();
    super.dispose();
  }

  late final _destinations = [
    _Destination('Home', Icons.home_outlined, Icons.home, const HomeScreen()),
    const _Destination('Search', Icons.search, Icons.search, SearchScreen()),
    const _Destination(
      'Library',
      Icons.headphones_outlined,
      Icons.headphones,
      LibraryScreen(),
    ),
...
