...
                        icon: const Icon(Icons.replay),
                      ),
                      StreamBuilder<bool>(
                        stream: player.playingStream,
                        initialData: player.playing,
                        builder: (_, snap) => IconButton(
                          tooltip: snap.data == true ? 'Pause' : 'Play',
                          onPressed: player.togglePlay,
                          icon: Icon(
                            snap.data == true
                                ? Icons.pause_rounded
                                : Icons.play_arrow_rounded,
                            size: 32,
...
